--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,1 +1,19 @@
 <h1>Lasagna</h1>
+<img src="https://www.allrecipes.com/thmb/9mfekhyvdu4WC0OZRad-EvtZZwI=/2250x0/filters:no_upscale():max_bytes(150000):strip_icc():gifv():format(webp)/7314119_italian-sausage-and-mushroom-lasagna-with-bechamel-sauce_photo-by-allrecipes-2000-79dd45395fbb4fb7a131c008abb6275d.jpg" width="400" height="400" alt="picture of cooked lasagna in a dish and on a plate">
+<h2>Description</h2>
+<p>Some recipes take a little more time to make but are so worth the effort — like lasagna. This versatile Italian dish can be labor-intensive, but the prep is worth it for the delicious final product. (It's no wonder Garfield the cat loved them so much.) Allrecipes has hundreds of lasagna recipes to choose from, but we've rounded up our 15 best lasagna recipes of all time. Scroll through to find recipes for artichoke spinach lasagna, creamy chicken lasagna, eggplant lasagna, and more lasagnas that you'll never get tired of.</p>
+<h3>Ingredients</h3>
+<ul>
+    <li>1 pound sweet Italian sausage</li>
+    <li>3/4 pound lean ground beef</li>
+    <li>1/2 cup minced onion</li>
+    <li>2 clove garlic, crushed</li>
+    <li>some other crap</li>
+</ul>
+<h3>Steps</h3>
+<ol>
+    <li>In a Dutch oven, cook sausage, ground beef, onion, and garlic over medium heat until well browned. Stir in crushed tomatoes, tomato paste, tomato sauce, and water. Season with sugar, basil, fennel seeds, Italian seasoning, 1 teaspoon salt, pepper, and 2 tablespoons parsley. Simmer, covered, for about 1 1/2 hours, stirring occasionally.</li>
+    <li>Bring a large pot of lightly salted water to a boil. Cook lasagna noodles in boiling water for 8 to 10 minutes. Drain noodles, and rinse with cold water. In a mixing bowl, combine ricotta cheese with egg, remaining parsley, and 1/2 teaspoon salt.</li>
+    <li>Preheat oven to 375 degrees F (190 degrees C).</li>
+    <li>Do some other things.</li>
+</ol>
