--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Ryan's Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1>Ryan's Recipes</h1>
     <a href="recipes/lasagna.html">Lasagna Recipe</a>
 </body>
 </html>
