--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ryan's Recipes</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Ryan's Recipes</h1>
-    <a href="recipes/lasagna.html">Lasagna Recipe</a>
+    <h1 class="desc">Ryan's Recipes</h1>
+    <div class="align-recipe">
+        <a class="link-recipe" href="recipes/lasagna.html">Lasagna Recipe</a>
+    </div>
 </body>
 </html>
